# homepage

./: Cargo.toml  Trunk.toml  build.rs  index.html  input.css  package-lock.json  tailwind.config.js
.github/workflows/: deploy.yml
src/: main.rs
src/components/: id.rs  mod.rs  nav.rs  page.rs
src/components/pages/: about.rs  landing.rs  mod.rs
src/components/pages/about/: about.rs  card.rs  images.rs  languages.rs  mod.rs
src/components/pages/landing/: mod.rs
src/components/pages/projects/: mod.rs  p1.rs  project.rs  project_card.rs  project_view.rs
src/components/pages/random/: mod.rs
